--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ace Game Store</title>
+    <title>Ace Game OS R18 Store</title>
     <style>
         :root { --steam-blue: #1b2838; --steam-light-blue: #66c0f4; --gold: #ffd700; --dark-grey: #0d1117; }
         body { background: var(--dark-grey); color: white; font-family: 'Segoe UI', sans-serif; margin: 0; }
